<resources>
    <string name="app_name" translatable="false">Best alarm clock</string>
    <string name="event_detail_title">Titulo del evento</string>
    <string name="description_subtitle">DESCRIPCIÓN</string>
    <string name="desc" translatable="false">Simple icon</string>
    <string name="default_date" translatable="false">18/12/2021 15:00hs</string>
    <string name="desc_default" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="about_menu">Acerca De</string>
    <string name="logout">Logout</string>
    <string name="delete_milestone_title">Eliminar Evento?</string>
    <string name="delete_milestone_msg">Esta seguro de que desea eliminar el evento?</string>
    <string name="ok_button">Aceptar</string>
    <string name="go_Settings">Ir a Configuracion</string>
    <string name="cancel_button">Cancelar</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_chrono">Cronometro</string>
    <string name="menu_countdown">Cuenta atras</string>
    <string name="userName" translatable="false">Federico Beron</string>
    <string name="userEmail" translatable="false">federico.beron@gmail.com</string>
    <string name="menu_detail">Detalle</string>
    <string name="menu_about">Acerca</string>
    <string name="CHANNEL_ID" translatable="false">VERBOSE_NOTIFICATION</string>
    <string name="VERBOSE_NOTIFICATION_CHANNEL_NAME" translatable="false">SimpleReminderMe Notifications</string>
    <string name="VERBOSE_NOTIFICATION_CHANNEL_DESCRIPTION" translatable="false">Shows notifications whenever work starts</string>
    <string name="NOTIFICATION_ID" translatable="false">1</string>
    <string name="vibration_key" translatable="false">vibrar</string>
    <string name="hit_search">Buscar eventos…</string>
    <string name="event_type">Tipo del evento</string>
    <string name="new_event_title">Nueva Alarma</string>
    <string name="title_hint_milestone">Nombre de la alarma</string>
    <string name="event_type_title">Tipo de evento</string>
    <string name="message_hint_milestone">Descripcion del evento</string>
    <string name="date_hint">Dia *</string>
    <string name="time_hint">Horario *</string>
    <string name="edit_menu">Editar</string>
    <string name="delete_menu">Eliminar</string>
    <string name="remember_alarm">Recordatorio: </string>
    <string name="about_title">FRAGMENTO ACERCA DE</string>
    <string name="about_fragment_hint">This is about fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="save_button">GUARDAR</string>
    <string name="monday">L</string>
    <string name="tuesday">M</string>
    <string name="wednesday">X</string>
    <string name="thursday">J</string>
    <string name="friday">V</string>
    <string name="saturday">S</string>
    <string name="sunday">D</string>
    <string name="snooze">Posponer</string>
    <string name="discard">Descartar</string>
    <string name="next_alarm_string">Próxima alarma</string>
    <string name="no_alarm">No hay alarmas activas</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="on_string">Activado</string>
    <string name="off_string">Desactivado</string>
    <string name="melody">Melodia</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="selected_melody">Melodia seleccionada</string>
    <string name="selected_vibration">Vibracion</string>
    <string name="selected_repeat">Repetir</string>
    <string name="selected_postpone">Posponer</string>
    <string name="minutes_string">%d minutos</string>
    <string name="hours_string">%d horas</string>
    <string name="hours_string_single">%d hora</string>
    <string name="no_repeat_string">No repetir</string>
    <string name="no_postpone_string">No posponer</string>
    <string name="no_vibrate_string">Sin vibración</string>
    <string name="no_melody_string">Sin melodia</string>
    <string name="no_alarm_entity">Se produjo un error inesperado al reproducir la alarma. Por favor contacte a soporte.</string>
    <string name="notification_title">%s Alarm</string>
    <string name="snack_bar_text">Deshacer item borrado</string>
    <string name="snack_bar_undo">Deshacer</string>
    <string name="select_all_menu">Todo</string>
    <string name="activate_menu">Activar</string>
    <string name="inactivate_menu">Desactivar</string>
    <string name="delete_alarms_title">Eliminar alarmas?</string>
    <string name="delete_alarms_msg">Esta seguro que desea eliminar las alarmas seleccionadas?</string>
    <string name="delete_alarm_title">Eliminar alarma?</string>
    <string name="ring_permission_title">Melodía en reposo</string>
    <string name="ring_permission_msg">Necesita otorgar permisos a la aplicacion para permitirle funcionar cuando la pantalla del dispositivo se encuentra bloqueada</string>
    <string name="delete_alarm_msg">Esta seguro que desea eliminar las alarma?</string>
    <string name="alarms_every">Todos los %s a las %s</string>
    <string name="alarms_everyDay">Todos dias a las %s</string>
</resources>