<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addalarm.melody.RingtoneListFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            android:contentDescription="@string/desc" />

        <TextView
            android:id="@+id/fragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/selected_vibration"
            android:textSize="24sp" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/onOffSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_view"
            android:backgroundTint="@color/material_on_surface_disabled"
            android:checked="true"
            android:layout_marginHorizontal="16dp"
            android:layout_below="@+id/fragmentTitle"

            android:paddingHorizontal="16dp"
            android:text="@string/on_string"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/vibrations_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/okButton"

            android:layout_below="@+id/onOffSwitch"
            android:layout_marginTop="16dp"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ok_button"
            android:textSize="24sp" />

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>