<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.milestonedetail.MilestoneDetailFragment"
    tools:ignore="MergeRootFrame"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textViewType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="16dp"
                    android:maxLines="2"
                    android:textStyle="bold"
                    tools:text="@string/event_type" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:maxLines="2"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        tools:text="@string/event_detail_title" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="12dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        app:cardCornerRadius="11dp">

                        <TextView
                            android:id="@+id/textViewDate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:textColor="@color/black_effective"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            tools:text="@string/default_date" />

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/description_subtitle"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    tools:text="@string/desc_default" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/colorGray" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>